refactor: OrderTable TableGroup 연관관계 제거